# zim-rag

./: .gitignore  LICENSE  MANIFEST.in  PYPI_PUBLISH.md  README.md  pyproject.toml  requirements.txt  test_install.sh  upload_pypi.bat  upload_pypi.sh
output/: 墨子墨家资料汇编_20260318_164956.md  墨子墨家资料汇编_完整版.md
output/mozi_index/: chroma.sqlite3
test_index/: chroma.sqlite3
tests/: __init__.py  generate_zim_answers.py  quick_test.py  sample_questions.json  search_mozi.py  test_core.py
zimrag/: __init__.py  __main__.py  api.py
zimrag/core/: __init__.py  content_index.py  llm_client.py  rag_engine.py  zim_parser.py
zimrag/interfaces/: __init__.py  cli.py  gui.py  web.py
zimrag/templates/: index.html
