[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zim-rag"
version = "1.0.0"
description = "基于 ZIM 文件和本地大模型的 RAG 知识库问答系统"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [
    {name = "ZIM-RAG Team", email = "zim-rag@example.com"}
]
keywords = ["zim", "rag", "ollama", "llm", "knowledge-base", "qa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "chromadb>=0.4.0",
    "requests>=2.28.0",
    "flask>=2.3.0",
    "pyside6>=6.5.0",
    "pyqtgraph>=0.13.0",
]

[project.optional-dependencies]
zim = ["zimfs>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
zim-rag = "zimrag.interfaces.cli:main"

[project.urls]
Homepage = "https://github.com/cycleuser/zim-rag"
Documentation = "https://github.com/cycleuser/zim-rag#readme"
Repository = "https://github.com/cycleuser/zim-rag.git"
Issues = "https://github.com/cycleuser/zim-rag/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["zimrag*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
